- [X] Adding Root page to routes  - [X] Adding befor_action to application_controller  - [X] Adding Menu for login, logout, sign_up, edit_profile and Categories

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,9 @@
 	  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
 	<% end %>
 	</p>
-	
+	<ul class="nav">
+	  <li class="active"><a href="/categories">Categories</a></li>
+	</ul>
     <%= yield %>
   </body>
 </html>
