- [X] Adding link to menu in application

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
 	</p>
 	<ul class="nav">
 	  <li class="active"><a href="/categories">Categories</a></li>
+	  <li class="active"><a href="/links">Links</a></li>
 	</ul>
     <%= yield %>
   </body>
