--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,9 +27,12 @@
 	<% end %>
 	</p>
 	<ul class="nav">
-	  <li class="active"><a href="/categories">Categories</a></li>
-	  <li class="active"><a href="/links">Links</a></li>
+    <li class="active"><a href="/home/index">Home</a></li>
+    <li class="active"><a href="/categories">Categories</a></li>
+    <li class="active"><a href="/links">Links</a></li>
 	</ul>
+  <div class="container">
     <%= yield %>
+  </div>
   </body>
 </html>
